k8s/03-mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: retailstore

spec:
  serviceName: mongo-svc
  replicas: 3

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo:7

        command:
          - mongod
          - "--bind_ip_all"
          - "--replSet"
          - rs0

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

  volumeClaimTemplates:

  - metadata:
      name: mongo-data

    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 2Gi
