k8s/02-mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: retailstore
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
