k8s/08-cart-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: retailstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: akashjagdale177/cart-service:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: retailstore
spec:
  selector:
    app: cart-service
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
