k8s/09-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: retailstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: akashjagdale177/order-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: retailstore
spec:
  selector:
    app: order-service
  ports:
  - port: 5004
    targetPort: 5004
  type: ClusterIP
