k8s/10-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: retailstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: akashjagdale177/user-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: retailstore
spec:
  selector:
    app: user-service
  ports:
  - port: 5005
    targetPort: 5005
  type: ClusterIP
