k8s/11-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: retailstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: akashjagdale177/notification-service
        imagePullPolicy: Always
        ports:
        - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: retailstore
spec:
  selector:
    app: notification-service
  ports:
  - port: 5006
    targetPort: 5006
  type: ClusterIP
