k8s/14-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailstore-ingress
  namespace: retailstore
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 5000
